--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,11 @@
             <artifactId>kotlinx-coroutines-core</artifactId>
             <version>1.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.0-jre</version>
+        </dependency>
+        <!-- Thanks for using https://jar-download.com -->
     </dependencies>
 </project>
